jswt-parser/src/snapshots/jswt_parser__expression__test__parse_member_dot_arguments_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_member_dot_arguments_expression",
                    module: "module/test_parse_member_dot_arguments_expression",
                    start: 0,
                    end: 33,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_member_dot_arguments_expression",
                        module: "module/test_parse_member_dot_arguments_expression",
                        start: 0,
                        end: 33,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_member_dot_arguments_expression",
                                    module: "module/test_parse_member_dot_arguments_expression",
                                    start: 0,
                                    end: 33,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_member_dot_arguments_expression",
                                        module: "module/test_parse_member_dot_arguments_expression",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_member_dot_arguments_expression",
                                        module: "module/test_parse_member_dot_arguments_expression",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_member_dot_arguments_expression",
                                        module: "module/test_parse_member_dot_arguments_expression",
                                        start: 16,
                                        end: 33,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_member_dot_arguments_expression",
                                                        module: "module/test_parse_member_dot_arguments_expression",
                                                        start: 18,
                                                        end: 31,
                                                    },
                                                    expression: Arguments(
                                                        ArgumentsExpression {
                                                            span: Span {
                                                                file: "test_parse_member_dot_arguments_expression",
                                                                module: "module/test_parse_member_dot_arguments_expression",
                                                                start: 18,
                                                                end: 30,
                                                            },
                                                            ident: MemberDot(
                                                                MemberDotExpression {
                                                                    span: Span {
                                                                        file: "test_parse_member_dot_arguments_expression",
                                                                        module: "module/test_parse_member_dot_arguments_expression",
                                                                        start: 18,
                                                                        end: 26,
                                                                    },
                                                                    target: This(
                                                                        ThisExpression {
                                                                            span: Span {
                                                                                file: "test_parse_member_dot_arguments_expression",
                                                                                module: "module/test_parse_member_dot_arguments_expression",
                                                                                start: 18,
                                                                                end: 22,
                                                                            },
                                                                        },
                                                                    ),
                                                                    expression: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "test_parse_member_dot_arguments_expression",
                                                                                module: "module/test_parse_member_dot_arguments_expression",
                                                                                start: 23,
                                                                                end: 26,
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "test_parse_member_dot_arguments_expression",
                                                                                    module: "module/test_parse_member_dot_arguments_expression",
                                                                                    start: 23,
                                                                                    end: 26,
                                                                                },
                                                                                value: "set",
                                                                            },
                                                                        },
                                                                    ),
                                                                },
                                                            ),
                                                            arguments: ArgumentsList {
                                                                span: Span {
                                                                    file: "test_parse_member_dot_arguments_expression",
                                                                    module: "module/test_parse_member_dot_arguments_expression",
                                                                    start: 26,
                                                                    end: 30,
                                                                },
                                                                arguments: [
                                                                    Literal(
                                                                        Integer(
                                                                            IntegerLiteral {
                                                                                span: Span {
                                                                                    file: "test_parse_member_dot_arguments_expression",
                                                                                    module: "module/test_parse_member_dot_arguments_expression",
                                                                                    start: 27,
                                                                                    end: 29,
                                                                                },
                                                                                value: 10,
                                                                            },
                                                                        ),
                                                                    ),
                                                                ],
                                                            },
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
