jswt-parser/src/snapshots/jswt_parser__expression__test__parse_member_dot_expression.snap
---
source: jswt-parser/src/expression.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_member_dot_expression",
                    module: "module/test_parse_member_dot_expression",
                    start: 0,
                    end: 29,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_member_dot_expression",
                        module: "module/test_parse_member_dot_expression",
                        start: 0,
                        end: 29,
                    },
                    source_elements: [
                        FunctionDeclaration(
                            FunctionDeclarationElement {
                                span: Span {
                                    file: "test_parse_member_dot_expression",
                                    module: "module/test_parse_member_dot_expression",
                                    start: 0,
                                    end: 29,
                                },
                                decorators: FunctionDecorators {
                                    annotations: [],
                                    export: false,
                                },
                                ident: Identifier {
                                    span: Span {
                                        file: "test_parse_member_dot_expression",
                                        module: "module/test_parse_member_dot_expression",
                                        start: 9,
                                        end: 13,
                                    },
                                    value: "test",
                                },
                                params: FormalParameterList {
                                    span: Span {
                                        file: "test_parse_member_dot_expression",
                                        module: "module/test_parse_member_dot_expression",
                                        start: 13,
                                        end: 15,
                                    },
                                    parameters: [],
                                },
                                returns: None,
                                body: BlockStatement {
                                    span: Span {
                                        file: "test_parse_member_dot_expression",
                                        module: "module/test_parse_member_dot_expression",
                                        start: 16,
                                        end: 29,
                                    },
                                    statements: StatementList {
                                        statements: [
                                            Expression(
                                                ExpressionStatement {
                                                    span: Span {
                                                        file: "test_parse_member_dot_expression",
                                                        module: "module/test_parse_member_dot_expression",
                                                        start: 18,
                                                        end: 27,
                                                    },
                                                    expression: Assignment(
                                                        BinaryExpression {
                                                            span: Span {
                                                                file: "test_parse_member_dot_expression",
                                                                module: "module/test_parse_member_dot_expression",
                                                                start: 18,
                                                                end: 26,
                                                            },
                                                            left: MemberDot(
                                                                MemberDotExpression {
                                                                    span: Span {
                                                                        file: "test_parse_member_dot_expression",
                                                                        module: "module/test_parse_member_dot_expression",
                                                                        start: 18,
                                                                        end: 21,
                                                                    },
                                                                    target: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "test_parse_member_dot_expression",
                                                                                module: "module/test_parse_member_dot_expression",
                                                                                start: 18,
                                                                                end: 19,
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "test_parse_member_dot_expression",
                                                                                    module: "module/test_parse_member_dot_expression",
                                                                                    start: 18,
                                                                                    end: 19,
                                                                                },
                                                                                value: "a",
                                                                            },
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                    expression: Identifier(
                                                                        IdentifierExpression {
                                                                            span: Span {
                                                                                file: "test_parse_member_dot_expression",
                                                                                module: "module/test_parse_member_dot_expression",
                                                                                start: 20,
                                                                                end: 21,
                                                                            },
                                                                            ident: Identifier {
                                                                                span: Span {
                                                                                    file: "test_parse_member_dot_expression",
                                                                                    module: "module/test_parse_member_dot_expression",
                                                                                    start: 20,
                                                                                    end: 21,
                                                                                },
                                                                                value: "b",
                                                                            },
                                                                            ty: Unknown,
                                                                        },
                                                                    ),
                                                                    ty: Unknown,
                                                                },
                                                            ),
                                                            op: Assign(
                                                                Span {
                                                                    file: "test_parse_member_dot_expression",
                                                                    module: "module/test_parse_member_dot_expression",
                                                                    start: 22,
                                                                    end: 23,
                                                                },
                                                            ),
                                                            right: Literal(
                                                                Integer(
                                                                    IntegerLiteral {
                                                                        span: Span {
                                                                            file: "test_parse_member_dot_expression",
                                                                            module: "module/test_parse_member_dot_expression",
                                                                            start: 24,
                                                                            end: 26,
                                                                        },
                                                                        value: 10,
                                                                        ty: Binding(
                                                                            "i32",
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                            ty: Unknown,
                                                        },
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
